# reels_creator

./: Cargo.toml  china_festival.json  coin_lamp.json  config.json  jocker_twenty.json  supported_games.json  supported_providers.json  tasks.txt  three_aztec_temples.json
.github/: copilot-instructions.md
src/: lib.rs  main.rs  storage.rs
src/bng/: mod.rs
src/bng/china_festival/: actions.rs  convert.rs  mod.rs  models.rs  storage.rs
src/bng/three_aztec_temples/: actions.rs  convert.rs  mod.rs  models.rs  storage.rs
src/games/: mod.rs
src/games/enjoygaming/: grand_lightning.rs  mod.rs
src/games/hacksaw/: gladius_death_or_glory.rs  mod.rs
src/games/octoplay/: mod.rs  super_grand_link_express_hold_and_win.rs
src/netg/: mod.rs
src/netg/jocker_twenty/: actions.rs  mod.rs  models.rs  storage.rs
