[package]
name = "reels_creator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
chrono = "0.4"
ordered-float = { version = "3.3", features = ["serde"] }
indexmap = "2.9"
tempfile = "3.4"